src/main/java/com/datascience9/pb/datawindow/parse/PowerBuilderDWParser.java
// Generated from ./src/main/java/com/datascience9/pb/datawindow/parse/PowerBuilderDWParser.g4 by ANTLR 4.9.2
package com.datascience9.pb.datawindow.parse;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PowerBuilderDWParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		TABLE=1, COLUMN=2, RETRIEVE=3, PBSELECT=4, VERSION=5, ARGUMENTS=6, SORT=7, 
		ANY=8, BLOB=9, BOOLEAN=10, BYTE=11, CHARACTER=12, CHAR=13, DATA=14, DATE_TYPE=15, 
		DATETIME=16, DECIMAL=17, DEC=18, DOUBLE=19, INTEGER=20, INT=21, LONG=22, 
		LONGLONG=23, NUMBERTYPE=24, REAL=25, STRING=26, TIME_TYPE=27, UNSIGNEDINTEGER=28, 
		UINT=29, UNDERSCORE=30, UNSIGNEDLONG=31, ULONG=32, WINDOW=33, TRUE=34, 
		FALSE=35, GLOBAL=36, SHARED=37, END=38, INDIRECT=39, VARIABLES=40, FORWARD=41, 
		PUBLIC=42, PRIVATE=43, FUNCTION=44, SUBROUTINE=45, READONLY=46, PROTOTYPES=47, 
		TYPE=48, TO=49, FROM=50, REF=51, NULL_=52, UPDATE=53, DYNAMIC=54, WITHIN=55, 
		PRIVATEWRITE=56, PROTECTED=57, PRIVATEREAD=58, PROTECTEDREAD=59, PROTECTEDWRITE=60, 
		LOCAL=61, EVENT=62, OPEN=63, GOTO=64, ELSE=65, IF=66, THEN=67, ELSEIF=68, 
		TRY=69, EXIT=70, CHOOSE=71, IS=72, CONTINUE=73, DO=74, WHILE=75, FOR=76, 
		CLOSE=77, NEXT=78, LOOP=79, UNTIL=80, STEP=81, CATCH=82, FINALLY=83, THROW=84, 
		RELEASE=85, CREATE=86, DESTROY=87, USING=88, POST=89, TRIGGER=90, SELECT=91, 
		DELETE=92, INSERT=93, DESCRIBE=94, RETURN=95, OR=96, AND=97, NOT=98, CALL=99, 
		HALT=100, SUPER=101, LIBRARY=102, SYSTEM=103, RPCFUNC=104, ALIAS=105, 
		THROWS=106, AUTOINSTANTIATE=107, DESCRIPTOR=108, STORAGE=109, PROCEDURE=110, 
		TILDA=111, EQ=112, GT=113, GTE=114, LT=115, LTE=116, GTLT=117, PLUS=118, 
		MINUS=119, PLUSEQ=120, MINUSEQ=121, COLONCOLON=122, MULT=123, DIV=124, 
		MULTEQ=125, DIVEQ=126, CARAT=127, LCURLY=128, RCURLY=129, LBRACE=130, 
		RBRACE=131, BRACES=132, TICK=133, DQUOTED_STRING=134, QUOTED_STRING=135, 
		COMMA=136, SEMI=137, LPAREN=138, RPAREN=139, COLON=140, DQUOTE=141, TQ=142, 
		DOUBLE_PIPE=143, DOTDOTDOT=144, NUMBER=145, DOT=146, DATE=147, TIME=148, 
		BINDPAR=149, ENUM=150, ID=151, EXPORT_HEADER=152, LINE_CONTINUATION=153, 
		SL_COMMENT=154, ML_COMMENT=155, WS=156;
	public static final int
		RULE_start_rule = 0, RULE_data_window_property = 1, RULE_window_property = 2, 
		RULE_prop = 3, RULE_rhs_list = 4, RULE_lhs = 5, RULE_rhs = 6, RULE_prop_value = 7, 
		RULE_table_decl = 8, RULE_data_storage = 9, RULE_table_column = 10, RULE_column_type = 11, 
		RULE_retrieve = 12, RULE_update_clause = 13, RULE_procedure = 14, RULE_argument_clause = 15, 
		RULE_argument_attribute = 16, RULE_sort_clause = 17, RULE_value = 18, 
		RULE_identifier = 19, RULE_data_type_sub = 20, RULE_data_type_name = 21;
	private static String[] makeRuleNames() {
		return new String[] {
			"start_rule", "data_window_property", "window_property", "prop", "rhs_list", 
			"lhs", "rhs", "prop_value", "table_decl", "data_storage", "table_column", 
			"column_type", "retrieve", "update_clause", "procedure", "argument_clause", 
			"argument_attribute", "sort_clause", "value", "identifier", "data_type_sub", 
			"data_type_name"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "'~'", "'='", "'>'", "'>='", "'<'", "'<='", "'<>'", 
			"'+'", "'-'", "'+='", "'-='", "'::'", "'*'", "'/'", "'*='", "'/='", "'^'", 
			"'{'", "'}'", "'['", "']'", "'[]'", "'`'", null, null, "','", "';'", 
			"'('", "')'", "':'", "'\"'", "'???'", "'||'", "'...'", null, "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "TABLE", "COLUMN", "RETRIEVE", "PBSELECT", "VERSION", "ARGUMENTS", 
			"SORT", "ANY", "BLOB", "BOOLEAN", "BYTE", "CHARACTER", "CHAR", "DATA", 
			"DATE_TYPE", "DATETIME", "DECIMAL", "DEC", "DOUBLE", "INTEGER", "INT", 
			"LONG", "LONGLONG", "NUMBERTYPE", "REAL", "STRING", "TIME_TYPE", "UNSIGNEDINTEGER", 
			"UINT", "UNDERSCORE", "UNSIGNEDLONG", "ULONG", "WINDOW", "TRUE", "FALSE", 
			"GLOBAL", "SHARED", "END", "INDIRECT", "VARIABLES", "FORWARD", "PUBLIC", 
			"PRIVATE", "FUNCTION", "SUBROUTINE", "READONLY", "PROTOTYPES", "TYPE", 
			"TO", "FROM", "REF", "NULL_", "UPDATE", "DYNAMIC", "WITHIN", "PRIVATEWRITE", 
			"PROTECTED", "PRIVATEREAD", "PROTECTEDREAD", "PROTECTEDWRITE", "LOCAL", 
			"EVENT", "OPEN", "GOTO", "ELSE", "IF", "THEN", "ELSEIF", "TRY", "EXIT", 
			"CHOOSE", "IS", "CONTINUE", "DO", "WHILE", "FOR", "CLOSE", "NEXT", "LOOP", 
			"UNTIL", "STEP", "CATCH", "FINALLY", "THROW", "RELEASE", "CREATE", "DESTROY", 
			"USING", "POST", "TRIGGER", "SELECT", "DELETE", "INSERT", "DESCRIBE", 
			"RETURN", "OR", "AND", "NOT", "CALL", "HALT", "SUPER", "LIBRARY", "SYSTEM", 
			"RPCFUNC", "ALIAS", "THROWS", "AUTOINSTANTIATE", "DESCRIPTOR", "STORAGE", 
			"PROCEDURE", "TILDA", "EQ", "GT", "GTE", "LT", "LTE", "GTLT", "PLUS", 
			"MINUS", "PLUSEQ", "MINUSEQ", "COLONCOLON", "MULT", "DIV", "MULTEQ", 
			"DIVEQ", "CARAT", "LCURLY", "RCURLY", "LBRACE", "RBRACE", "BRACES", "TICK", 
			"DQUOTED_STRING", "QUOTED_STRING", "COMMA", "SEMI", "LPAREN", "RPAREN", 
			"COLON", "DQUOTE", "TQ", "DOUBLE_PIPE", "DOTDOTDOT", "NUMBER", "DOT", 
			"DATE", "TIME", "BINDPAR", "ENUM", "ID", "EXPORT_HEADER", "LINE_CONTINUATION", 
			"SL_COMMENT", "ML_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PowerBuilderDWParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PowerBuilderDWParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class Start_ruleContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(PowerBuilderDWParser.EOF, 0); }
		public TerminalNode RELEASE() { return getToken(PowerBuilderDWParser.RELEASE, 0); }
		public TerminalNode NUMBER() { return getToken(PowerBuilderDWParser.NUMBER, 0); }
		public TerminalNode SEMI() { return getToken(PowerBuilderDWParser.SEMI, 0); }
		public List<Window_propertyContext> window_property() {
			return getRuleContexts(Window_propertyContext.class);
		}
		public Window_propertyContext window_property(int i) {
			return getRuleContext(Window_propertyContext.class,i);
		}
		public Table_declContext table_decl() {
			return getRuleContext(Table_declContext.class,0);
		}
		public List<Data_window_propertyContext> data_window_property() {
			return getRuleContexts(Data_window_propertyContext.class);
		}
		public Data_window_propertyContext data_window_property(int i) {
			return getRuleContext(Data_window_propertyContext.class,i);
		}
		public Start_ruleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start_rule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PowerBuilderDWParserListener ) ((PowerBuilderDWParserListener)listener).enterStart_rule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PowerBuilderDWParserListener ) ((PowerBuilderDWParserListener)listener).exitStart_rule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PowerBuilderDWParserVisitor ) return ((PowerBuilderDWParserVisitor<? extends T>)visitor).visitStart_rule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Start_ruleContext start_rule() throws RecognitionException {
		Start_ruleContext _localctx = new Start_ruleContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start_rule);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==RELEASE) {
				{
				setState(44);
				match(RELEASE);
				setState(45);
				match(NUMBER);
				setState(46);
				match(SEMI);
				}
			}

			setState(52);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(49);
					window_property();
					}
					} 
				}
				setState(54);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(56);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TABLE) {
				{
				setState(55);
				table_decl();
				}
			}

			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COLUMN || _la==DATA || _la==ID) {
				{
				setState(60);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(58);
					data_window_property();
					}
					break;
				case 2:
					{
					setState(59);
					window_property();
					}
					break;
				}
				}
				setState(64);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(65);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Data_window_propertyContext extends ParserRuleContext {
		public TerminalNode DATA() { return getToken(PowerBuilderDWParser.DATA, 0); }
		public TerminalNode LPAREN() { return getToken(PowerBuilderDWParser.LPAREN, 0); }
		public Rhs_listContext rhs_list() {
			return getRuleContext(Rhs_listContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(PowerBuilderDWParser.RPAREN, 0); }
		public Data_window_propertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_data_window_property; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PowerBuilderDWParserListener ) ((PowerBuilderDWParserListener)listener).enterData_window_property(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PowerBuilderDWParserListener ) ((PowerBuilderDWParserListener)listener).exitData_window_property(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PowerBuilderDWParserVisitor ) return ((PowerBuilderDWParserVisitor<? extends T>)visitor).visitData_window_property(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Data_window_propertyContext data_window_property() throws RecognitionException {
		Data_window_propertyContext _localctx = new Data_window_propertyContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_data_window_property);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(DATA);
			setState(68);
			match(LPAREN);
			setState(69);
			rhs_list();
			setState(70);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Window_propertyContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(PowerBuilderDWParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(PowerBuilderDWParser.RPAREN, 0); }
		public List<PropContext> prop() {
			return getRuleContexts(PropContext.class);
		}
		public PropContext prop(int i) {
			return getRuleContext(PropContext.class,i);
		}
		public Window_propertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_window_property; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PowerBuilderDWParserListener ) ((PowerBuilderDWParserListener)listener).enterWindow_property(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PowerBuilderDWParserListener ) ((PowerBuilderDWParserListener)listener).exitWindow_property(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PowerBuilderDWParserVisitor ) return ((PowerBuilderDWParserVisitor<? extends T>)visitor).visitWindow_property(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Window_propertyContext window_property() throws RecognitionException {
		Window_propertyContext _localctx = new Window_propertyContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_window_property);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			identifier();
			setState(73);
			match(LPAREN);
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << COLUMN) | (1L << DATA) | (1L << UPDATE))) != 0) || _la==ID) {
				{
				{
				setState(74);
				prop();
				}
				}
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(80);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PropContext extends ParserRuleContext {
		public LhsContext lhs() {
			return getRuleContext(LhsContext.class,0);
		}
		public TerminalNode EQ() { return getToken(PowerBuilderDWParser.EQ, 0); }
		public Rhs_listContext rhs_list() {
			return getRuleContext(Rhs_listContext.class,0);
		}
		public PropContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PowerBuilderDWParserListener ) ((PowerBuilderDWParserListener)listener).enterProp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PowerBuilderDWParserListener ) ((PowerBuilderDWParserListener)listener).exitProp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PowerBuilderDWParserVisitor ) return ((PowerBuilderDWParserVisitor<? extends T>)visitor).visitProp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PropContext prop() throws RecognitionException {
		PropContext _localctx = new PropContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_prop);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			lhs();
			setState(83);
			match(EQ);
			setState(84);
			rhs_list();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Rhs_listContext extends ParserRuleContext {
		public TerminalNode LPAREN() { return getToken(PowerBuilderDWParser.LPAREN, 0); }
		public Rhs_listContext rhs_list() {
			return getRuleContext(Rhs_listContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(PowerBuilderDWParser.RPAREN, 0); }
		public List<RhsContext> rhs() {
			return getRuleContexts(RhsContext.class);
		}
		public RhsContext rhs(int i) {
			return getRuleContext(RhsContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(PowerBuilderDWParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(PowerBuilderDWParser.COMMA, i);
		}
		public Rhs_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rhs_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PowerBuilderDWParserListener ) ((PowerBuilderDWParserListener)listener).enterRhs_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PowerBuilderDWParserListener ) ((PowerBuilderDWParserListener)listener).exitRhs_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PowerBuilderDWParserVisitor ) return ((PowerBuilderDWParserVisitor<? extends T>)visitor).visitRhs_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Rhs_listContext rhs_list() throws RecognitionException {
		Rhs_listContext _localctx = new Rhs_listContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_rhs_list);
		int _la;
		try {
			setState(100);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(86);
				match(LPAREN);
				setState(87);
				rhs_list();
				setState(88);
				match(RPAREN);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(90);
				rhs();
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(91);
					match(COMMA);
					setState(93);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
					case 1:
						{
						setState(92);
						rhs();
						}
						break;
					}
					}
					}
					setState(99);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LhsContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode UPDATE() { return getToken(PowerBuilderDWParser.UPDATE, 0); }
		public LhsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lhs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PowerBuilderDWParserListener ) ((PowerBuilderDWParserListener)listener).enterLhs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PowerBuilderDWParserListener ) ((PowerBuilderDWParserListener)listener).exitLhs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PowerBuilderDWParserVisitor ) return ((PowerBuilderDWParserVisitor<? extends T>)visitor).visitLhs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LhsContext lhs() throws RecognitionException {
		LhsContext _localctx = new LhsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_lhs);
		try {
			setState(104);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case COLUMN:
			case DATA:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(102);
				identifier();
				}
				break;
			case UPDATE:
				enterOuterAlt(_localctx, 2);
				{
				setState(103);
				match(UPDATE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RhsContext extends ParserRuleContext {
		public TerminalNode LPAREN() { return getToken(PowerBuilderDWParser.LPAREN, 0); }
		public RhsContext rhs() {
			return getRuleContext(RhsContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(PowerBuilderDWParser.RPAREN, 0); }
		public TerminalNode NUMBER() { return getToken(PowerBuilderDWParser.NUMBER, 0); }
		public Prop_valueContext prop_value() {
			return getRuleContext(Prop_valueContext.class,0);
		}
		public TerminalNode UPDATE() { return getToken(PowerBuilderDWParser.UPDATE, 0); }
		public TerminalNode ANY() { return getToken(PowerBuilderDWParser.ANY, 0); }
		public TerminalNode COLUMN() { return getToken(PowerBuilderDWParser.COLUMN, 0); }
		public TerminalNode DQUOTED_STRING() { return getToken(PowerBuilderDWParser.DQUOTED_STRING, 0); }
		public TerminalNode DATE() { return getToken(PowerBuilderDWParser.DATE, 0); }
		public RhsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rhs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PowerBuilderDWParserListener ) ((PowerBuilderDWParserListener)listener).enterRhs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PowerBuilderDWParserListener ) ((PowerBuilderDWParserListener)listener).exitRhs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PowerBuilderDWParserVisitor ) return ((PowerBuilderDWParserVisitor<? extends T>)visitor).visitRhs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RhsContext rhs() throws RecognitionException {
		RhsContext _localctx = new RhsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_rhs);
		try {
			setState(117);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LPAREN:
				enterOuterAlt(_localctx, 1);
				{
				setState(106);
				match(LPAREN);
				setState(107);
				rhs();
				setState(108);
				match(RPAREN);
				}
				break;
			case NUMBER:
				enterOuterAlt(_localctx, 2);
				{
				setState(110);
				match(NUMBER);
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 3);
				{
				setState(111);
				prop_value();
				}
				break;
			case UPDATE:
				enterOuterAlt(_localctx, 4);
				{
				setState(112);
				match(UPDATE);
				}
				break;
			case ANY:
				enterOuterAlt(_localctx, 5);
				{
				setState(113);
				match(ANY);
				}
				break;
			case COLUMN:
				enterOuterAlt(_localctx, 6);
				{
				setState(114);
				match(COLUMN);
				}
				break;
			case DQUOTED_STRING:
				enterOuterAlt(_localctx, 7);
				{
				setState(115);
				match(DQUOTED_STRING);
				}
				break;
			case DATE:
				enterOuterAlt(_localctx, 8);
				{
				setState(116);
				match(DATE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Prop_valueContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(PowerBuilderDWParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(PowerBuilderDWParser.ID, i);
		}
		public List<TerminalNode> NUMBER() { return getTokens(PowerBuilderDWParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(PowerBuilderDWParser.NUMBER, i);
		}
		public List<TerminalNode> DOT() { return getTokens(PowerBuilderDWParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(PowerBuilderDWParser.DOT, i);
		}
		public Prop_valueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prop_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PowerBuilderDWParserListener ) ((PowerBuilderDWParserListener)listener).enterProp_value(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PowerBuilderDWParserListener ) ((PowerBuilderDWParserListener)listener).exitProp_value(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PowerBuilderDWParserVisitor ) return ((PowerBuilderDWParserVisitor<? extends T>)visitor).visitProp_value(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Prop_valueContext prop_value() throws RecognitionException {
		Prop_valueContext _localctx = new Prop_valueContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_prop_value);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(ID);
			setState(126);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(121);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==DOT) {
						{
						setState(120);
						match(DOT);
						}
					}

					setState(123);
					_la = _input.LA(1);
					if ( !(_la==NUMBER || _la==ID) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					} 
				}
				setState(128);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
